@@ -7,6 +7,7 @@ import org.loose.fis.bsa.exceptions.UsernameAlreadyExistsException;
 import org.loose.fis.bsa.exceptions.UsernameDoesNotExistException;
 import org.loose.fis.bsa.exceptions.WrongPasswordException;
 import org.loose.fis.bsa.exceptions.WrongRoleException;
+import org.loose.fis.bsa.model.LoggedUser;
 import org.loose.fis.bsa.model.User;
 
 import java.nio.charset.StandardCharsets;
@@ -14,28 +15,37 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Objects;
 
-
+// java -jar --module-path F:\javafx-sdk-18.0.1\lib --add-modules javafx.controls,javafx.fxml F:\nitrite-explorer-3.4.3.jar
 public class UserService {
 
     private static ObjectRepository<User> userRepository;
 
+    private static Nitrite database;
+
     public static void initDatabase() {
-        Nitrite database = Nitrite.builder()
+
+        database = Nitrite.builder()
                 .filePath(getPathToFile("registration-example.db").toFile())
                 .openOrCreate("test", "test");
 
         userRepository = database.getRepository(User.class);
+
     }
 
-    public static void login (String username, String password, String role) throws UsernameDoesNotExistException, WrongPasswordException, WrongRoleException {
+    public static void checkCredentials(String username, String password, String role) throws UsernameDoesNotExistException, WrongPasswordException, WrongRoleException {
         int verifPass = 1, verifUser = 1, verifRole = 1;
-        /* devine 0 daca exista */
-        for(User user : userRepository.find())
-        {
-            if(Objects.equals(username, user.getUsername())) verifUser = 0;
-            if(Objects.equals(encodePassword(username, password), user.getPassword())) verifPass = 0;
-            if(Objects.equals(role, user.getRole())) verifRole = 0;
+
+        for(User user : userRepository.find()) {
+            if(Objects.equals(user.getUsername(), username)) {
+                verifUser = 0;
+                if(Objects.equals(encodePassword(username, password), user.getPassword())) {
+                    verifPass = 0;
+                    if(Objects.equals(role, user.getRole()))
+                        verifRole = 0;
+                }
+            }
         }
+
         if(verifUser == 1)
             throw new UsernameDoesNotExistException(username);
         if(verifPass == 1)
@@ -45,10 +55,13 @@ public class UserService {
 
     }
 
+
     public static void addUser(String username, String password, String role) throws UsernameAlreadyExistsException {
         checkUserDoesNotAlreadyExist(username);
         userRepository.insert(new User(username, encodePassword(username, password), role));
     }
+
+
 
     private static void checkUserDoesNotAlreadyExist(String username) throws UsernameAlreadyExistsException {
         for (User user : userRepository.find()) {
@@ -56,6 +69,57 @@ public class UserService {
                 throw new UsernameAlreadyExistsException(username);
         }
     }
+
+    /*
+    public static void login() throws UsernameDoesNotExistException, WrongRoleException, WrongPasswordException {
+
+        for(User user : userRepository.find())
+            {
+                checkUserDoesNotExist(user);
+                checkPassword(user);
+                checkRole(user);
+            }
+
+    }
+
+
+    private static void checkUserDoesNotExist(User user) throws UsernameDoesNotExistException {
+        int ok = 0;
+        if(Objects.equals(LoggedUser.getLoggedUser(), user.getUsername()))
+            ok = 1;
+
+        if(ok==0) throw new UsernameDoesNotExistException(LoggedUser.getLoggedUser());
+    }
+
+    private static void checkPassword(User user) throws WrongPasswordException {
+        int ok = 0;
+        if(Objects.equals(LoggedUser.getLoggedUser(), user.getUsername())){
+
+            if(Objects.equals(LoggedUser.getLoggedPassw(), user.getPassword())) {
+                    ok = 1;
+            }
+
+        }
+
+        if(ok == 0) throw new WrongPasswordException();
+    }
+
+    private static void checkRole(User user) throws WrongRoleException {
+        int ok = 0;
+
+        if(Objects.equals(LoggedUser.getLoggedUser(), user.getUsername())) {
+            if(Objects.equals(LoggedUser.getLoggedPassw(), user.getPassword())){
+                if(Objects.equals(LoggedUser.getLoggedRole(), user.getRole())) {
+                    ok = 1;
+
+                }
+            }
+        }
+
+        if(ok == 0) throw new WrongRoleException();
+    }
+
+    */
 
     private static String encodePassword(String salt, String password) {
         MessageDigest md = getMessageDigest();
@@ -77,6 +141,20 @@ public class UserService {
         }
         return md;
     }
+
+    /*
+    public static void addDepartmentToUser(String username, String department){
+        for(User user : userRepository.find()) {
+           if (Objects.equals(user.getUsername(), username)) {
+                user.setDepartment(department);
+                userRepository.update(user);
+            }
+        }
+    }
+
+     */
+
+
 
 
 }
